# 2016HairRemovalAlgorithm

./: CMakeLists.txt  LICENSE  Makefile  README.txt  main.py
Code/src/: gaps.cu  inpainting.cpp  io.cpp  main.cpp  skelft.cu  skelft_core.cpp  vis.cpp
Code/src/include/: api.h  color.h  field.h  genrl.h  image.h  io.h  pgm.h  skelft.h  skelftKernel.h  vis.h
Example data and results/: rr051107_CNP.ppm
Original Code/: Makefile
Original Code/src/: color.cpp  flags.cpp  mfmm.cpp  pgm.cpp
Original Code/src/include/: fmm.h  inpainting.h  mfmm.h
src/: batch.cpp  fmm.cpp  gaps.cu  skelft_core.cpp
src/include/: connected.h  field.h  flags.h  image.h  skelft.h
